namespace PoVicTranslate.Web.Models;

/// <summary>
/// Request model for translation.
/// </summary>
public sealed record TranslationRequest(string Text);
